@@ -10,6 +10,7 @@ ENH: Ticket#577 - Added image button support for TPager (Qiang)
 ENH: Ticket#623 - TMemCache to support multiple servers (Carl)
 ENH: Ticket#667 - Added TFeedService.ContentType property (Qiang)
 ENH: Ticket#678 - Improved DateTimeFormatInfo performance (Stever)
+ENH: Ticket#681 - TUrlMapping can construct custom URLs now (Qiang)
 ENH: Added THead requirement check (Qiang)
 CHG: GeSHi is replaced with Text_Highlighter (Christophe)
 CHG: Validators will not validate disabled controls (Qiang)
